--- a/memory-game-multiplayer/index.html
+++ b/memory-game-multiplayer/index.html
@@ -29,6 +29,12 @@
     <div class="game-info">
       <span>Moves: <span id="moveCounter">0</span></span>
       <span>Time: <span id="timer">00:00</span></span>
+      <span id="playerTurn">Current Player: Player 1</span>
+    </div>
+
+    <div class="scoreboard">
+      <span>Player 1 Matches: <span id="player1Score">0</span></span>
+      <span>Player 2 Matches: <span id="player2Score">0</span></span>
     </div>
 
     <div id="gameGrid" class="game-grid"></div>
